--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -2,12 +2,12 @@
   background-color: #0a0e2e;
   height: 80px;
   display: flex;
-  justify-content: start;
+  justify-content: space-between;
   align-items: center;
 }
 
 .menubars {
-  margin-left: 2rem;
+  margin-left: 0.1rem;
   font-size: 2rem;
   background: none;
 }
@@ -72,13 +72,14 @@
   width: 95%;
   height: 100%;
   display: flex;
+
   align-items: center;
   padding: 0 16px;
   border-radius: 4px;
 }
 
 .navtext a:hover {
-  background-color: #1a83ff;
+  background-color: #aba104;
 }
 
 span {
@@ -87,4 +88,15 @@ span {
 
 .logo {
   margin-top: 2rem;
+}
+
+.logosmall {
+  display: flex;
+  width: 15px;
+  margin-right: 5rem;
+  margin-top: 0.5rem;
+}
+
+.text {
+  color: #fff;
 }
