--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
 }
 
 .menubars {
@@ -34,6 +35,7 @@
   top: 0;
   left: 0;
   transition: 350ms;
+  z-index: 1;
 }
 
 .navitems {
