--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -2,7 +2,7 @@
 
 .home {
   display: flex;
-  height: 100vh;
+  min-height: 100vh;
   align-items: center;
   justify-content: space-between;
   flex-direction: row-reverse;
