--- a/src/components/RegularCard.module.css
+++ b/src/components/RegularCard.module.css
@@ -1,4 +1,5 @@
 .card {
+  margin: 0.5rem;
   height: 30rem;
   width: 20rem;
   border: 1px solid #000;
@@ -9,6 +10,8 @@
 .image {
   width: 100%;
   filter: brightness(70%);
+  overflow: hidden;
+  border-radius: 10px;
 }
 
 .title {
