--- a/src/pages/Extracurricular.module.css
+++ b/src/pages/Extracurricular.module.css
@@ -1,6 +1,24 @@
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
 .programs {
   padding: 3rem 5rem;
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.btn {
+  margin: 0.5rem auto;
+  padding: 0.5rem;
+  background-color: #aba104;
+  border-radius: 5px;
+  color: white;
+  width: 7rem;
+  height: 4rem;
+  cursor: pointer;
 }
