--- a/src/components/RegularCard.module.css
+++ b/src/components/RegularCard.module.css
@@ -34,3 +34,11 @@
   text-align: center;
   padding: 0.1rem 0.5rem;
 }
+
+@media screen and (max-width: 600px) {
+  .card {
+    margin: 0.2rem;
+    height: 28rem;
+    width: 18rem;
+  }
+}
