--- a/src/pages/Contact.module.css
+++ b/src/pages/Contact.module.css
@@ -78,3 +78,39 @@
   cursor: pointer;
   text-decoration: none;
 }
+
+@media screen and (max-width: 600px) {
+  .contact {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+
+    min-height: 200vh;
+  }
+  .frequent {
+    grid-row: 1/2;
+    grid-column: 1/-1;
+    margin: 1rem auto;
+    padding: 0rem;
+  }
+
+  .address {
+    grid-row: 2/3;
+    grid-column: 1/-1;
+    margin: 1rem auto;
+    text-align: center;
+    padding: 0rem;
+  }
+
+  .contactForm {
+    grid-row: 3/4;
+    grid-column: 1/-1;
+    margin: 1rem auto;
+    padding: 0rem;
+    margin-left: 3rem;
+  }
+
+  .button {
+    margin-left: 11rem;
+  }
+}
